syntax = "proto3";

package geoip2;

service GeoIP {
  rpc Lookup (IpRequest) returns (GeoInfo) {}
}

// The request with ip address
message IpRequest {
    string ip = 1;
}

// The response message containing the Geo info about current IP address
message GeoInfo {
	City city = 1;
    Continent continent = 2;
    Country country = 3;
    Location location = 4;
    Postal postal = 5;
    Country registeredCountry = 6;
    RepresentedCountry representedCountry = 7;
    repeated Country subdivisions = 8;
    Traits traits = 9;
}

// type of City
message City {
	uint32 geoNameID = 1;
    map<string, string> names = 2;
}

message Continent {
    string code = 1;
    uint32 geoNameID = 2;
    map<string, string> names = 3;
}

message Country {
    string isoCode = 1;
    uint32 geoNameID = 2;
    map<string, string> names = 3;
}

message Location {
    int64 latitude = 1;
    int64 longitude = 2;
    uint32 metroCode = 3;
    string timeZone = 4;
}

message Postal {
    string Code = 1;
}

message RepresentedCountry {
    string isoCode = 1;
    uint32 geoNameID = 2;
    map<string, string> names = 3;
    string type = 4;
}

message Traits {
    bool isAnonymousProxy = 1;
    bool isSatelliteProvider = 2;
}